--- a/pages/projects/alterMmi.html
+++ b/pages/projects/alterMmi.html
@@ -48,7 +48,7 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/altermmi-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/altermmi-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">J'ai choisi de reprendre l'identité graphique de Windows 95. J'ai donc repensé et recréé l'entièreté des illustrations utilisées dans la vidéos (hors icônes). Ce processus a été particulièrement chronophage compte tenudu niveau de détail de chaque élément.</p>
             </div>
