--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -47,7 +47,7 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">La première étape était de trouver un concept simple et original. Nous avons eu l’idée de jouer avec les voyages dans le temps. Le jeu consiste en une succession de parcours que le joueur doit franchir en alternant entre le présent et un futur désetrique et insalubre.</p>
             </div>
