--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -48,7 +48,7 @@
     <section id="firstMotion">
 
         <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: cover;"></div>
+            <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">L’écriture, puis les nombreuses réécritures du scénario qui ont suivis nous ont permis d’ébaucher un storyboard que nous avons ensuite redessiné sur ordinateur.</p>
             </div>
@@ -57,16 +57,11 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. </p>
+                <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
             </div>
         </div>
 
-        <div class="project">
-            <div class="background-image" style="background-image: url(/images/projets/public-actif-3.webp);;background-size: contain;"></div>
-            <div class="text">
-                <p class="text">Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
-            </div>
-        </div>
+
 
         <div class="video">
             <p>La théorie du Public Actif de Gabriel Tarde :</p>
