changement photos montagnes/métro

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
             et actuellement vidéaste chez l'<a href="https://www.lespritcritique.fr/" target="_blank">Esprit Critique</a>.
         </p>
         <div>
-            <a class="cta" href="#projects">mes projets</a>
-            <a class="cta" href="#photos">mes photos</a>
+            <a class="cta" href="/pages/projects.html">tous mes projets</a>
+            <a class="cta" href="https://www.behance.net/tomwainberg">toutes mes photos</a>
 
         </div>
     </section>
@@ -159,11 +159,11 @@
         </div>
 
         <div class="container">
-            <a href="https://www.behance.net/gallery/193965621/Montagne" target="_blank" class="card background-image"
-                style="background-image: url('/images/photos/miniature-montagne.webp');background-size: cover;">
+            <a href="https://www.behance.net/gallery/213382585/Mtropolitain-Parisien" target="_blank" class="card background-image"
+                style="background-image: url('/images/photos/miniature-metro.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
-                <p>(03) <span>Montagne</span></p> <!-- Titre du projet -->
+                <p>(03) <span>Métropolitain parisien</span></p> <!-- Titre du projet -->
             </a>
             <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank"
                 class="card background-image"
