Ajout de nouveaux projets et mise à jour des descriptions dans la section projets

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -39,13 +39,40 @@
 
     <section id="all-projects">
 
+        <a href="/pages/projects/lordre.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/minitiature-lordre.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">L'Ordre</p>
+                <p class="text">Réalisation d'un court-métrage de guerre, avec comme thème "sous-marin".</p>
+            </div>
+        </div></a>
+
+        <a href="/pages/projects/ebullition.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">Ébullition</p>
+                <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
+            </div>
+        </div></a>
+
+
+
+
         <a href="/pages/projects/publicActif.html"><div class="project">
             <div class="background-image" style="background-image: url('/images/miniatures/miniature-public-actif.webp');background-size: cover;"></div>
             <div class="text">
                 
                 <p class="title">Public Actif</p>
 
-                <p class="text">Animation de la théorie du Public Actif de Gabriel Tarde.</p>
+                <p class="text">Motion design présentant la théorie du Public Actif de Gabriel Tarde.</p>
+            </div>
+        </div></a>
+
+        <a href="/pages/projects/alterMmi.html"><div class="project">
+            <div class="background-image" style="background-image: url('/images/miniatures/miniature-altermmi.webp');background-size: cover;"></div>
+            <div class="text">
+                <p class="title">Alter'MMI</p>
+                <p class="text">Réalisation d'un motion design pour présenter le métier de développeur back-end.</p>
             </div>
         </div></a>
 
@@ -73,29 +100,9 @@
             </div>
         </div></a>
 
-        <a href="/pages/projects/alterMmi.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/miniatures/miniature-altermmi.webp');background-size: cover;"></div>
-            <div class="text">
-                <p class="title">Alter'MMI</p>
-                <p class="text">Réalisation d'une vidéo pour présenter le métier de développeur back-end.</p>
-            </div>
-        </div></a>
 
-        <a href="/pages/projects/ebullition.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/miniatures/miniature-ebulliton.webp');background-size: cover;"></div>
-            <div class="text">
-                <p class="title">Ébullition</p>
-                <p class="text">Réalisation d'un épisode pilote d'une émission culturelle.</p>
-            </div>
-        </div></a>
 
-        <a href="/pages/projects/lordre.html"><div class="project">
-            <div class="background-image" style="background-image: url('/images/miniatures/minitiature-lordre.webp');background-size: cover;"></div>
-            <div class="text">
-                <p class="title">L'Ordre</p>
-                <p class="text">Réalisation d'un court-métrage de guerre, avec comme thème "sous-marin".</p>
-            </div>
-        </div></a>
+
 
 
 
