Mise à jour des liens vers la page des projets dans la navigation

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <nav>
             <a href="/index.html">accueil</a>
             <a href="/index.html#about">à propos</a>
-            <a href="/index.html#projects">projets</a>
+            <a href="/pages/projects.html">projets</a>
             <a href="/index.html#photos">photos</a>
             <a href="/index.html#contact">me contacter</a>
             <button onclick="handleMenu()">menu</button>
@@ -67,7 +67,7 @@
         <nav>
             <a href="/index.html" onclick="handleMenu()">accueil</a>
             <a href="/index.html#about" onclick="handleMenu()">à propos</a>
-            <a href="/index.html#projects" onclick="handleMenu()">projets</a>
+            <a href="/pages/projects.html" onclick="handleMenu()">projets</a>
             <a href="/index.html#photos" onclick="handleMenu()">photos</a>
             <a href="/index.html#contact" onclick="handleMenu()">me contacter</a>
             <button onclick="handleMenu()">close</button>
