Mise à jour des titres et descriptions des projets BeFake et Ébullition pour améliorer la clarté et l'impact du contenu

--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -33,13 +33,13 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(03) </span>BeFake.</h1>
+        <h1><span>(dev) </span>BeFake.</h1>
         <p>
-            Nous avions comme objectif, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, de développer un site web avec le framework Ruby on Rails, e exploitant la technologie de génération d’images Midjourney. Pour contraster avec cette technologie qui permet de créer n’importe quelle image factice en quelques secondes, nous avons eu l'idée de mettre en scène le réseau social qui se veut le plus "authentique" : BeReal.
+            Avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avions pour objectif de créer un site web en utilisant Ruby on Rails et la technologie de génération d’images MidJourney. Pour jouer sur le contraste entre des images générées en quelques secondes et l’authenticité prônée par BeReal, nous avons imaginé BeFake.
         </p>
        
         <p>
-            Tout cela a été réalisé dans un délai de 4 jours, dans le cadre de la formation MMI (février 2023).        </p>
+            Tout cela a été réalisé dans un délai de 4 jours, dans le cadre de la formation MMI (février 2023).</p>
     </section>
 
     <section id="firstMotion">
@@ -47,20 +47,22 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/befake-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">Il a tout d’abord fallu repenser l’interface utilisateur de BeReal afin de l’adapter à tous les formats d’écran, l’application n’étant disponible que sur smartphone</p>
+                <p class="text">La première étape a été de repenser l’interface utilisateur de BeReal pour qu’elle fonctionne sur tout type d’écran, et pas uniquement sur mobile comme l’application originale. Cela impliquait de réadapter le design et l’ergonomie tout en respectant l’identité visuelle de base.</p>
             </div>
         </div>
 
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/befake-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Il est finalement possible d’importer deux images (caméra avant et arrière), choisir son nom d’utilisateur, rédiger une courte description et spécifier la localisation du post, à la manière de l’application originale.</p>
+                <p class="text">Nous avons ensuite intégré les fonctionnalités principales : importer deux images (caméras avant et arrière), personnaliser son pseudo, rédiger une courte description et indiquer une localisation. Ces outils permettent de recréer l’expérience BeReal tout en jouant sur l’idée de fausse authenticité qui donne son identité au site.</p>
             </div>
         </div>
 
         <section id="project-page-title">
             <p>
-                Le site est en libre accès en suivant <a href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">ce lien</a>. Vous pouvez parcourir les différents posts, rajouter vos propres BeFake, et modifier ou supprimer ceux existant. Afin de rendre le site accueillant, merci de ne pas publier de contenu offensant et de ne pas supprimer ou modifier des BeFake ne vous appartenant pas.            </p>
+                BeFake nous permet d'un côté de remettre en question la tendance d’un internet toujours plus proche des utilisateurs, et de l’autre, paradoxalement, de critiquer le développement alarmant de technologies altérant la réalité d’une manière quasiment imperceptible.   </p>
+               <br> 
+         <p>Le site est en libre accès en suivant le lien. Vous pouvez y consulter les publications existantes, poster vos propres créations, et modifier ou supprimer du contenu. Afin de rendre le site accueillant, merci de ne pas publier de contenu offensant et de ne pas supprimer ou modifier des BeFake ne vous appartenant pas.            </p>
         </section>
             
         <a class="big-btn-to-website" href="https://befake.osc-fr1.scalingo.io/befakeposts" target="_blank">Accéder à BeFake<img src="/images/call-click-file.svg"></a>
