--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(06) </span>Ébullition</h1>
+        <h1><span>(vidéo) </span>Ébullition</h1>
         <p>
             Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition, avec comme premier sujet la fatalité (supposée) de l’ennui !            
         </p>
@@ -57,7 +57,7 @@
                 <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/ebullition-2.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité. Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour le comprendre, et mieux vivre avec.
+                <p class="text">Tout au long de l’épisode, nous avons abordé plusieurs sujets, ce qui nous a permis de varier les formats de présentation. Par exemple, un sujet a été illustré à travers un plan-séquence, un autre a été entièrement tourné sur fond vert pour immerger le présentateur dans différentes œuvres, et des interviews ont été réalisées pour enrichir le propos avec des points de vue extérieurs.
                 </p>
             </div>
         </div>
@@ -71,6 +71,9 @@
             </div>
         </div>
 
+        <section id="project-page-title">
+            <p>
+                Avec (par ordre d'apparition sur la photo ci-dessus) : Noémie Nuñez, Mathis Dumon, Simon Daguet-Kargl, notre invité, Roxane Horchower, Justine Gelis, Brice Bréart, moi-même, Adèle Beaune, Gwenaëlle Yau-Chun-Wan, et enfin César Morel.</section>
 
         <div class="video">
             <p>Ébullition - L'ennui est-il une fatalité ? :</p>
