Mise à jour des titres de projets pour refléter plus précisément leur contenu et leur objectif

--- a/pages/projects/alterMmi.html
+++ b/pages/projects/alterMmi.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(05) </span>Alter'MMI</h1>
+        <h1><span>(motion) </span>Alter'MMI</h1>
         <p>
             L'objectif était de réaliser une courte vidéo pour présenter l'alternance de <a href="https://matthieumarchand.netlify.app/" target="_blank">Matthieu Marchand</a>. Il fallait expliquer en quoi consistait le développement back-end. Étant donné la complexité du sujet, j'ai décidé  de réaliser une vidéo d'animation pour rendre le sujet plus accessible.
             
