--- a/pages/projects/beFake.html
+++ b/pages/projects/beFake.html
@@ -33,7 +33,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(dev) </span>BeFake.</h1>
+        <h1><span>(dev web) </span>BeFake.</h1>
         <p>
             Avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avions pour objectif de créer un site web en utilisant Ruby on Rails et la technologie de génération d’images MidJourney. Pour jouer sur le contraste entre des images générées en quelques secondes et l’authenticité prônée par BeReal, nous avons imaginé BeFake.
         </p>
