--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(02) </span>Escapades Temporelles</h1>
+        <h1><span>(jeu-vidéo) </span>Escapades Temporelles</h1>
         <p>
             J'ai été impliqué en tant que chef de projet, directeur artistique, et scénariste dans la conception et le développement d'Escapades Temporelles, un jeu d'aventure et de réflexion, en collaboration avec deux camarades.
             Nous avons été récompensés du prix du meilleur jeu dans la catégorie lycéenne aux <a href="https://digital-games.hauts-de-seine.fr/" target="_blank">Hauts-de-Seine Digital Games</a>.            
