--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(01) </span>Public Actif</h1>
+        <h1><span>(motion) </span>Public Actif</h1>
         <p>
             En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avons vulgarisé la théorie du Public Actif de Gabriel Tarde, illustrée dans un style de flat design mis en perspective. L'objectif était de rendre nos explications non seulement esthétiques, mais surtout ludiques.
             
