--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -34,7 +34,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(07) </span>L'Ordre</h1>
+        <h1><span>(vidéo) </span>L'Ordre</h1>
         <p>
             Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition, avec comme premier sujet la fatalité (supposée) de l’ennui !            
         </p>
