--- a/pages/projects/refonteMusba.html
+++ b/pages/projects/refonteMusba.html
@@ -33,7 +33,7 @@
     </section>
 
     <section id="project-page-title">
-        <h1><span>(04) </span>Refonte MusBA</h1>
+        <h1><span>(dev web) </span>Refonte MusBA</h1>
         <p>
             Nous avions comme objectif de concevoir puis développer la refonte graphique d'un site web. Nous avons choisi celui du Musée des Beaux-Arts de Bordeaux (MusBA). Nous avons travaillé sur l'identité visuelle, l'accessibilité et le référencement du site.
         </p>
