Amélioration des descriptions et du contenu du projet Public Actif pour plus de clarté et d'impact

--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -36,7 +36,7 @@
     <section id="project-page-title">
         <h1><span>(motion) </span>Public Actif</h1>
         <p>
-            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avons vulgarisé la théorie du Public Actif de Gabriel Tarde, illustrée dans un style de flat design mis en perspective. L'objectif était de rendre nos explications non seulement esthétiques, mais surtout ludiques.
+            En une minute, avec <a href="https://simondaguetkargl.fr/" target="_blank">Simon Daguet--Kargl</a>, nous avons vulgarisé la théorie du Public Actif de Gabriel Tarde à travers une animation en flat design mise en perspective. L’objectif était de rendre nos explications aussi attrayantes sur le fond qu’agréables à regarder.
             
         </p>
        
@@ -50,16 +50,21 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/public-actif-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">L’écriture, puis les nombreuses réécritures du scénario qui ont suivis nous ont permis d’ébaucher un storyboard que nous avons ensuite redessiné sur ordinateur.</p>
+                <p class="text">Nous avons commencé par écrire le scénario, une étape qui a nécessité plusieurs réécritures pour affiner la clarté et le rythme de la narration. Une fois le script finalisé, nous avons dessiné un storyboard assez simple pour poser les bases visuelles de l’animation, avant de le recréer et de le peaufiner sur ordinateur.</p>
             </div>
         </div>
 
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/public-actif-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Nous avons utilisé Illustrator pour concevoir toutes les illustrations, After Effects pour les animer et Premiere Pro pour  assembler l’ensemble des rush. Enfin, nous avons enregistré et retravaillé la plupart des bruitages de la vidéo afin de donner vie à notre univers.</p>
+                <p class="text">Pour la production, nous avons utilisé Illustrator afin de concevoir les illustrations, After Effects pour leur donner vie grâce à l’animation, et Premiere Pro pour monter les différentes séquences. L’ajout des bruitages, enregistrés et retravaillés par nos soins, a permis d’ancrer notre univers sonore.</p>
             </div>
         </div>
+
+        <section id="project-page-title">
+            <p>
+                Cette animation marque mon tout premier projet en motion design et mes débuts sur After Effects. L’ajout d'une troisième dimension constitue une petite fierté (fruit de quelques nuits écourtées), apportant une touche esthétique et renforçant la profondeur visuelle de l’ensemble.</p>
+        </section>
 
 
 
