Mise à jour des descriptions des projets L'Ordre et Public Actif pour améliorer la clarté et l'impact du contenu

--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -36,8 +36,7 @@
     <section id="project-page-title">
         <h1><span>(vidéo) </span>L'Ordre</h1>
         <p>
-            Nous avons écrit, tourné puis monté l’épisode pilote d’une émission culturelle. Le résultat ? Ébullition, avec comme premier sujet la fatalité (supposée) de l’ennui !            
-        </p>
+            Pour répondre au thème imposé, "sous-marin de guerre", nous avons réalisé un court-métrage en explorant les tensions humaines dans un cadre confiné. </p>
        
         <p>
             Tout cela a été réalisé dans un délai de 8 jours, dans le cadre de la formation MMI (octobre 2024).
@@ -49,7 +48,8 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/ordre-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">Notre objectif était de créer du contenu permettant de stimuler la réflexion et l'introspection auprès d’un public jeune. À travers une approche de vulgarisation, nous abordons des concepts qui, bien qu’abstraits au premier abord, sont omniprésents et occupent une place importante dans notre quotidien.
+                <p class="text">Le processus d’écriture a été guidé par des œuvres de référence : Le Chant du Loup a inspiré la réalisation, tandis que Twelve Angry Men a servi de modèle pour les dialogues et la tension permanente en huis-clos. Nous avons porté une attention particulière à l’authenticité visuelle, en intégrant de véritables uniformes et accessoires de gendarmes. 
+
                 </p>
             </div>
         </div>
@@ -57,11 +57,18 @@
                 <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/ordre-2.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">L’ennui, bien que souvent considéré comme inconfortable, peut s’avérer être un catalyseur essentiel pour la créativité. Plutôt que de le combattre sans relâche, nous avons décidé de l’étudier pour le comprendre, et mieux vivre avec.
+                <p class="text">
+                    Nous avons pu tourner dans le décor d'un escape game bordelais (que l'on remercie encore chaleureusement), <a href="https://lepassage-escape.fr/" target="_blank">Le Passage</a>, qui offrait un décor réaliste difficile à égaler avec nos moyens. Je me suis chargé de la réalisation, du montage, du mixage sonore et de l’animation du générique.
                 </p>
             </div>
         </div>
  
+        <section id="project-page-title">
+            <p>
+                Bien qu'il reste des points d’amélioration, notamment sur l’éclairage, qui a limité la qualité visuelle, et l’écriture, qui aurait gagné à être plus aboutie avec plus de temps, nous sommes malgré tout très fiers du résultat, qui reflète l’intensité et l’immersion que nous souhaitions transmettre. </p>
+               <br> 
+         <p>Avec Simon Daguet--Kargl, Justine Gelis, Adèle Beaune, Noémie Nuñez, l'aide de Driss Loudiyi et la participation d'Alexis Juhel.</p>
+        </section>
 
 
         <div class="video">
