--- a/pages/projects/publicActif.html
+++ b/pages/projects/publicActif.html
@@ -63,7 +63,7 @@
 
         <section id="project-page-title">
             <p>
-                Cette animation marque mon tout premier projet en motion design et mes débuts sur After Effects. L’ajout d'une troisième dimension constitue une petite fierté (fruit de quelques nuits écourtées), apportant une touche esthétique et renforçant la profondeur visuelle de l’ensemble.</p>
+                Cette animation marque mon tout premier projet en motion design et mes débuts sur After Effects. L’ajout d'une troisième dimension, fruit de quelques nuits écourtées, constitue une petite fierté, apportant une touche esthétique et renforçant la profondeur visuelle de l’ensemble.</p>
         </section>
 
 
