Mise à jour des liens et des descriptions des projets pour améliorer la clarté et l'accessibilité

--- a/pages/projects/escapadesTemporelles.html
+++ b/pages/projects/escapadesTemporelles.html
@@ -36,12 +36,12 @@
     <section id="project-page-title">
         <h1><span>(jeu-vidéo) </span>Escapades Temporelles</h1>
         <p>
-            J'ai été impliqué en tant que chef de projet, directeur artistique, et scénariste dans la conception et le développement d'Escapades Temporelles, un jeu d'aventure et de réflexion, en collaboration avec deux camarades.
-            Nous avons été récompensés du prix du meilleur jeu dans la catégorie lycéenne aux <a href="https://digital-games.hauts-de-seine.fr/" target="_blank">Hauts-de-Seine Digital Games</a>.            
+            En tant que chef de projet, directeur artistique et scénariste, j’ai contribué à la conception et au développement d’Escapades Temporelles, un jeu d’aventure et de réflexion imaginé avec deux camarades. Nous avons été récompensés du prix du meilleur jeu dans la catégorie lycéenne aux <a href="https://digital-games.hauts-de-seine.fr/" target="_blank">Hauts-de-Seine Digital Games</a>.
         </p>
         
         <p>
-            Tout cela a été réalisé dans un cadre hors-scolaire, avec le soutien de notre professeur de NSI (octobre 2022-avril 2023).        </p>
+            Tout cela a été réalisé dans un cadre hors-scolaire, avec le soutien de notre professeur de NSI (octobre 2022-avril 2023)..     
+        </p>
     </section>
 
     <section id="firstMotion">
@@ -49,14 +49,15 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-1.webp);background-size: contain;"></div>
             <div class="text">
-                <p class="text">La première étape était de trouver un concept simple et original. Nous avons eu l’idée de jouer avec les voyages dans le temps. Le jeu consiste en une succession de parcours que le joueur doit franchir en alternant entre le présent et un futur désetrique et insalubre.</p>
+                <p class="text">Nous avons commencé par rechercher un concept à la fois original et accessible. L’idée de jouer avec les voyages dans le temps s’est rapidement imposée. Le jeu repose sur une mécanique centrale : le joueur doit franchir une série de parcours en alternant entre un présent ordinaire et un futur dystopique, dévasté et insalubre, chacun ayant ses propres obstacles.
+                </p>
             </div>
         </div>
 
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Inspiré par Portal, le jeu ne comporte aucune cinématique afin de laisser la plus de liberté possible au joueur. Plusieurs page de dialogues ont été rédigées puis enregistrées afin de faire face à toutes les éventualités du joueur. De même, plusieurs affiches ont été judicieusement placées à plusieurs endroits afin de guider le joueur sans briser l’immersion.</p>
+                <p class="text">Inspiré par Portal, le jeu propose une narration sans cinématiques, laissant au joueur une plus grande liberté d’exploration. Des dialogues, soigneusement rédigés puis enregistrés, s’adaptent aux différentes actions possibles. Par ailleurs, des affiches et éléments visuels, disséminés stratégiquement, guident le joueur sans briser l’immersion.</p>
             </div>
         </div>
 
@@ -64,9 +65,15 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/escapades-temporelles-3.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">Pitché puis présenté lors de l’édition 2023 des Hauts-de-Seine Digital Games, nous avons remporté prix du meilleur jeu dans la catégorie lycéenne. Les graphismes, le concept et la narration du jeu ont particulièrement été remarqués par le jury. </p>
+                <p class="text">Lors de l’édition 2023 des Hauts-de-Seine Digital Games, Escapades Temporelles a séduit le jury, qui a salué l’originalité de son concept, la qualité de sa narration et son identité visuelle. Le jeu a remporté le prix du meilleur jeu lycéen, et nous avons remporté un trophée qui siège désormais fièrement dans notre ancienne classe de cours.</p>
             </div>
         </div>
+
+        <section id="project-page-title">
+            <p>
+                Bien que le site du jeu ne soit malheureusement plus hébergé, et qu’il ne soit donc plus possible de le télécharger, nous avons réalisé un court trailer qui permet d’en découvrir un aperçu. Vous pouvez le visionner ci-dessous.</p>
+               
+        </section>
 
         <div class="video">
             <p>Trailer de Escapades Temporelles :</p>
