--- a/pages/projects/lordre.html
+++ b/pages/projects/lordre.html
@@ -65,9 +65,17 @@
  
         <section id="project-page-title">
             <p>
-                Bien qu'il reste des points d’amélioration, notamment sur l’éclairage, qui a limité la qualité visuelle, et l’écriture, qui aurait gagné à être plus aboutie avec plus de temps, nous sommes malgré tout très fiers du résultat, qui reflète l’intensité et l’immersion que nous souhaitions transmettre. </p>
+                Bien qu'il reste des points d’amélioration, notamment sur l’éclairage, qui a limité la qualité visuelle, et l’écriture, qui aurait gagné à être plus aboutie avec un peu plus de temps, nous sommes malgré tout très fiers du résultat, qui reflète l’intensité et l’immersion que nous souhaitions transmettre. </p>
                <br> 
-         <p>Avec Simon Daguet--Kargl, Justine Gelis, Adèle Beaune, Noémie Nuñez, l'aide de Driss Loudiyi et la participation d'Alexis Juhel.</p>
+         <p>Avec 
+            <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>, 
+            <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>, 
+            <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>, 
+            <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie Nuñez</a>, 
+            l'aide de 
+            <a href="https://www.linkedin.com/in/drissdll/" target="_blank">Driss Loudiyi</a> 
+            et la participation d'
+            <a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>.</p>
         </section>
 
 
