--- a/pages/projects/refonteMusba.html
+++ b/pages/projects/refonteMusba.html
@@ -35,7 +35,7 @@
     <section id="project-page-title">
         <h1><span>(dev web) </span>Refonte MusBA</h1>
         <p>
-            Nous avions comme objectif de concevoir puis développer la refonte graphique d'un site web. Nous avons choisi celui du Musée des Beaux-Arts de Bordeaux (MusBA). Nous avons travaillé sur l'identité visuelle, l'accessibilité et le référencement du site.
+            Nous avions pour mission de repenser graphiquement le site web du Musée des Beaux-Arts de Bordeaux (MusBA). L’objectif : moderniser l’identité visuelle, renforcer l’accessibilité pour tous les utilisateurs et optimiser le référencement naturel (SEO).
         </p>
        
         <p>
@@ -48,7 +48,8 @@
             <div class="background-image" style="background-image: url(/images/projets/musba-1.webp);background-size: contain;"></div>
             <div class="text">
                 <p class="text">
-                    La première semaine était consacrée au relooking du design. Nous nous sommes concentrés sur la création d'une nouvelle identité visuelle pour le musée et l'amélioration de l'attrait du site web. Nous avons également mis un grand accent sur l'accessibilité. 
+                    La première étape consistait à revoir le design du site. Nous avons imaginé une nouvelle identité visuelle, plus moderne et en adéquation avec la richesse culturelle du musée. L’expérience utilisateur a été au cœur de nos choix, avec une attention particulière portée à l’accessibilité pour garantir un site inclusif et intuitif.
+
                     </p>
             </div>
         </div>
@@ -56,15 +57,23 @@
         <div class="project">
             <div class="background-image" style="background-image: url(/images/projets/musba-2.webp);;background-size: contain;"></div>
             <div class="text">
-                <p class="text">La deuxième semaine était dédiée au codage du site. Nous avons transformé notre concept en un site web fonctionnel. Nous avons également appris à optimiser le référencement (SEO) du site pour garantir une meilleure visibilité en ligne.</p>
+                <p class="text">Une fois le design validé, nous avons consacré la deuxième semaine au développement. Notre concept a pris forme avec la création de deux pages web entièrement fonctionnelles et responsives. En parallèle, nous avons optimisé le référencement naturel pour améliorer la visibilité en ligne, en nous basant sur les meilleures pratiques SEO.</p>
             </div>
         </div>
 
         <section id="project-page-title">
             <p>
-                Ce projet a été réalisé en collaboration avec Thomas Riquier, Alexis Juhel, Antoine Courcaud et Estheban Volle, et ensemble, nous avons créé deux pages du site avec une conception responsive, prêtes à offrir aux visiteurs une expérience en ligne optimale.</p>
+                Ce projet nous a permis d'allier design et développement technique. Le résultat : une refonte qui reflète mieux l’identité du MusBA et propose une navigation en ligne fluide, accessible et moderne. Vous pouvez y accéder avec le lien ci-dessous. 
+</p>
+               <br> 
+         <p>Réalisé avec 
+            <a href="https://www.linkedin.com/in/thomas-riq/" target="_blank">Thomas Riquier</a>, 
+            <a href="https://fr.linkedin.com/in/alexis-juhel16" target="_blank">Alexis Juhel</a>, 
+            <a href="https://fr.linkedin.com/in/antoine-courcaud" target="_blank">Antoine Courcaud</a> et
+            <a href="https://fr.linkedin.com/in/esthebann-volle-750924294" target="_blank">Estheban Volle</a>.
+ 
         </section>
-            
+
         <a class="big-btn-to-website" href="https://musba.netlify.app/" target="_blank">Accéder à la refonte<img src="/images/call-click-file.svg"></a>
 
 
