--- a/pages/projects/ebullition.html
+++ b/pages/projects/ebullition.html
@@ -73,7 +73,21 @@
 
         <section id="project-page-title">
             <p>
-                Avec (par ordre d'apparition sur la photo ci-dessus) : Noémie Nuñez, Mathis Dumon, Simon Daguet-Kargl, notre invité, Roxane Horchower, Justine Gelis, Brice Bréart, moi-même, Adèle Beaune, Gwenaëlle Yau-Chun-Wan, et enfin César Morel.</section>
+                <p>
+                    Avec (par ordre d'apparition sur la photo ci-dessus) : 
+                    <a href="https://www.linkedin.com/in/no%C3%A9mie-nu%C3%B1ez-b4698b294/" target="_blank">Noémie Nuñez</a>, 
+                    <a href="https://fr.linkedin.com/in/mathis-dumon-b8a98b294" target="_blank">Mathis Dumon</a>, 
+                    <a href="https://fr.linkedin.com/in/simon-daguet-kargl" target="_blank">Simon Daguet-Kargl</a>, 
+                    notre invité, 
+                    <a href="https://fr.linkedin.com/in/roxane-horchower-558a6628a" target="_blank">Roxane Horchower</a>, 
+                    <a href="https://fr.linkedin.com/in/justine-gelis-559989294" target="_blank">Justine Gelis</a>, 
+                    <a href="https://fr.linkedin.com/in/brice-br%C3%A9art-008450295" target="_blank">Brice Bréart</a>, 
+                    moi-même, 
+                    <a href="https://fr.linkedin.com/in/ad%C3%A8le-beaune-132985268" target="_blank">Adèle Beaune</a>, 
+                    <a href="https://fr.linkedin.com/in/gwena%C3%ABlle-yau-chun-wan-3a3826299" target="_blank">Gwenaëlle Yau-Chun-Wan</a>, 
+                    et enfin 
+                    <a href="https://fr.linkedin.com/in/c%C3%A9sar-morel" target="_blank">César Morel</a>.
+                </p></section>
 
         <div class="video">
             <p>Ébullition - L'ennui est-il une fatalité ? :</p>
