Mise à jour des titres des projets pour une présentation plus claire et ajout d'un lien vers plus de photos

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
         <a class="cta" href="/pages/projects.html">plus de projets...</a>
     </section>
+
     <section id="photos">
         <div class="particles-js" id="particles-js-photos"></div>
         <h2>quelques photos</h2>
@@ -148,14 +149,14 @@
             <a href="https://www.behance.net/gallery/193965507/Bordeaux" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-bordeaux.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
-                <p>(02) <span>Bordeaux</span></p> <!-- Titre du projet -->
+                <p><span>Bordeaux</span></p> <!-- Titre du projet -->
             </a>
 
             <a href="https://www.behance.net/gallery/193833567/Paris-13" target="_blank" class="card background-image"
                 style="background-image: url('/images/photos/miniature-paris.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
-                <p>(01) <span>Paris</span></p> <!-- Titre du projet -->
+                <p><span>Paris</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
@@ -164,18 +165,18 @@
                 style="background-image: url('/images/photos/miniature-metro.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
-                <p>(03) <span>Métropolitain parisien</span></p> <!-- Titre du projet -->
+                <p><span>Métropolitain parisien</span></p> <!-- Titre du projet -->
             </a>
             <a href="https://www.behance.net/gallery/193832437/Exploration-Urbaine" target="_blank"
                 class="card background-image"
                 style="background-image: url('/images/photos/miniature-urbex.webp');background-size: cover;">
                 <!-- image du projet(url) & lien vers la page(href) -->
 
-                <p>(04) <span>Explorations Urbaines</span></p> <!-- Titre du projet -->
+                <p><span>Explorations Urbaines</span></p> <!-- Titre du projet -->
             </a>
         </div>
 
-        
+        <a class="cta" href="https://www.behance.net/tomwainberg">plus de photos...</a>
     </section>
 
 
